# rustcat-micro

./: .gitignore  Cargo.toml  build.rs
src/: fetch.rs  main.rs  model.rs
src/proto/: gtfs_realtime.rs
