[package]
name = "rustcat-micro"
version = "0.1.0"
authors = ["Jack Greenberg <kcaj@grebneerg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.4", features = ['rustls'] }
protobuf = "2.0"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.4.0"

[build-dependencies]
protoc-rust = "2.0"
